# drawtree-mcp

./: .gitignore  Dockerfile.http  LICENSE  README.md  pyproject.toml
deploy/: render-mcp.yaml
docs/: CLAUDE_DESKTOP_SETUP.md  starter-skill.md
drawtree_mcp/: __init__.py  api_client.py  falsification.py  fleet_match.py  framework_retrieval.py  http_server.py  narrative.py  scenario.py  server.py
drawtree_mcp/_kernel/: aggregation.py  validate.py
kb/: build_framework_index.py  frameworks.json
tests/: test_tools.py
